--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,3 @@
-
-
 <div class="container">
 
       <h2>Thread Forummi</h2>
@@ -16,13 +14,12 @@
 
 <% @home.each do |thread_forum| %>
   <tr>
-    <td><%= thread_forum.user_id %></td>
     <td><%= thread_forum.title %></td>
     <td><%= thread_forum.body %></td>
-    <td><%= link_to 'Show', thread_forum %></td>
-    <td><%= link_to 'Destroy', thread_forum, method: :delete, data: { confirm: 'Are you sure?' } %></td> 
   </tr>
 <% end %>
 </table>
+<% if user_signed_in? %>
 <%= link_to 'New Thread forum', new_thread_forum_path,:class=>'btn',:role=>'button'%>
     </div>
+<% end %>
