--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -4,11 +4,11 @@
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :username %><br />
-  <%= f.email_field :username, :autofocus => true %></div>
+  <!-- <div><%= f.label :username %><br />
+  <%= f.email_field :username %></div>
 
   <div><%= f.label :birthday %><br />
-  <%= f.email_field :birthday, :autofocus => true %></div>
+  <%= f.email_field :birthday, :autofocus => true %></div> -->
 
   <div><%= f.label :email %><br />
   <%= f.email_field :email, :autofocus => true %></div>
