--- a/app/views/thread_forums/_form.html.erb
+++ b/app/views/thread_forums/_form.html.erb
@@ -11,10 +11,10 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <!-- <div class="field">
     <%= f.label :user_id %><br />
-    <%= f.number_field :user_id %>
-  </div>
+    <%= f.text_field :user_id %>
+  </div> -->
   <div class="field">
     <%= f.label :title %><br />
     <%= f.text_field :title %>
@@ -23,7 +23,7 @@
     <%= f.label :body %><br />
     <%= f.text_area :body %>
   </div>
-  <div class="field">
+  <!-- <div class="field">
     <%= f.label :status %><br />
     <%= f.text_field :status %>
   </div>
@@ -34,7 +34,7 @@
   <div class="field">
     <%= f.label :reputation_point %><br />
     <%= f.number_field :reputation_point %>
-  </div>
+  </div> -->
   <div class="field">
     <%= f.label :category_id %><br />
     <%= f.number_field :category_id %>
