--- a/app/views/thread_forums/index.html.erb
+++ b/app/views/thread_forums/index.html.erb
@@ -1,34 +1,7 @@
 <div class="container">
 <h1>Thread forums</h1>
 
-<table class="table table-striped">
-  <tr>
-    <th>Title</th>
-    <th>Body</th>
-    <!-- <th>Status</th>
-    <th>Is deleted</th>
-    <th>Reputation point</th>
-    <th>Category</th> -->
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @thread_forums.each do |thread_forum| %>
-  <tr>
-    <!-- <td><%= thread_forum.user_id %></td> -->
-    <td><%= thread_forum.title %></td>
-    <td><%= thread_forum.body %></td>
-    <td><%= thread_forum.status %></td>
-    <!-- <td><%= thread_forum.is_deleted %></td>
-    <td><%= thread_forum.reputation_point %></td>
-    <td><%= thread_forum.category_id %></td> -->
-    <td><%= link_to 'Show', thread_forum %></td>
-    <td><%= link_to 'Edit', edit_thread_forum_path(thread_forum) %></td>
-    <td><%= link_to 'Destroy', thread_forum, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
+<%= render :partial => 'shared/threads_table', :locals => {:thread_forums => @thread_forums} %>
 
 <br />
 
