--- a/app/views/thread_forums/edit.html.erb
+++ b/app/views/thread_forums/edit.html.erb
@@ -3,6 +3,6 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @thread_forum %> |
-<%= link_to 'Back', thread_forums_path %>
+<%= link_to 'Show', @thread_forum, :class=>'btn' %> |
+<%= link_to 'Back', thread_forums_path, :class=>'btn'%>
 </div>
