--- a/app/views/thread_forums/index.html.erb
+++ b/app/views/thread_forums/index.html.erb
@@ -5,5 +5,5 @@
 
 <br />
 
-<%= link_to 'New Thread forum', new_thread_forum_path,:class=>'btn',:role=>'button'%>
+<%= link_to 'New Thread', new_thread_forum_path,:class=>'btn btn-primary',:role=>'button'%>
 </div>
