--- a/app/views/shared/_threads_table.html.erb
+++ b/app/views/shared/_threads_table.html.erb
@@ -14,15 +14,15 @@
 <% thread_forums.each do |thread_forum| %>
   <tr>
     <!-- <td><%= thread_forum.user_id %></td> -->
-    <td><%= thread_forum.title %></td>
+    <td><%= link_to thread_forum.title, thread_forum %></td>
     <td><%= thread_forum.body %></td>
-    <td><%= thread_forum.status %></td>
-    <!-- <td><%= thread_forum.is_deleted %></td>
+    <!-- <td><%= thread_forum.status %></td>
+    <td><%= thread_forum.is_deleted %></td>
     <td><%= thread_forum.reputation_point %></td>
-    <td><%= thread_forum.category_id %></td> -->
+    <td><%= thread_forum.category_id %></td>
     <td><%= link_to 'Show', thread_forum %></td>
-    <td><%= link_to 'Edit', edit_thread_forum_path(thread_forum) %></td>
-    <td><%= link_to 'Destroy', thread_forum, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Edit', edit_thread_forum_path(thread_forum) %></td> --> 
+    <td><%= link_to 'Destroy', thread_forum, :class=>'btn btn-danger btn-block', method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
 </table>
