add user_id with curent.user_id and show add created by email

--- a/app/views/thread_forums/show.html.erb
+++ b/app/views/thread_forums/show.html.erb
@@ -7,6 +7,10 @@
 </p> -->
 
 <p>
+  <b>Created By:</b>
+  <%= @thread_forum.user.email %>
+</p>
+<p>
   <b>Title:</b>
   <%= @thread_forum.title %>
 </p>
