--- a/app/views/thread_forums/_form.html.erb
+++ b/app/views/thread_forums/_form.html.erb
@@ -11,10 +11,10 @@
     </div>
   <% end %>
 
-  <!-- <div class="field">
-    <%= f.label :user_id %><br />
+  <div class="field">
+    <%#= f.label :user_id %><br />
     <%= f.hidden_field :user_id, :value => current_user.id %>
-  </div> -->
+  </div>
   <div class="field">
     <%= f.label :title %><br />
     <%= f.text_field :title %>
