--- a/app/views/thread_forums/edit.html.erb
+++ b/app/views/thread_forums/edit.html.erb
@@ -4,5 +4,5 @@
 <%= render 'form' %>
 
 <%= link_to 'Show', @thread_forum, :class=>'btn' %> |
-<%= link_to 'Back', thread_forums_path, :class=>'btn'%>
+<%= link_to '< Back', thread_forums_path, :class=>'btn'%>
 </div>
