--- a/app/views/thread_forums/show.html.erb
+++ b/app/views/thread_forums/show.html.erb
@@ -42,5 +42,5 @@
 </table>
 
 <%= link_to 'Edit', edit_thread_forum_path(@thread_forum), :class=>'btn' %> |
-<%= link_to 'Back', thread_forums_path, :class=>'btn' %>
+<%= link_to '< Back', thread_forums_path, :class=>'btn' %>
 </div>
