--- a/app/views/thread_forums/show.html.erb
+++ b/app/views/thread_forums/show.html.erb
@@ -19,7 +19,13 @@
   <b>Body:</b>
   <%= @thread_forum.body %>
 </p>
-
+<p class="vote">
+| <%= pluralize @thread_forum.reputation_for(:votes).to_i, "vote" %>
+<% if current_user && !current_user.voted_for?(@thread_forum) %>
+  | <%= link_to "up", vote_thread_forum_path(@thread_forum, type: "up"), method: "post" %>
+  | <%= link_to "down", vote_thread_forum_path(@thread_forum, type: "down"), method: "post" %>
+<% end %>
+</p>
 <!-- <p>
   <b>Status:</b>
   <%= @thread_forum.status %>
