--- a/app/views/thread_forums/_form.html.erb
+++ b/app/views/thread_forums/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :body %><br />
-    <%= f.text_area :body %>
+    <%= f.text_area :body, :rows=>'10' %>
   </div>
   <!-- <div class="field">
     <%= f.label :status %><br />
