--- a/app/assets/stylesheets/bootstrap.css
+++ b/app/assets/stylesheets/bootstrap.css
@@ -226,8 +226,8 @@ body {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 20px;
-  color: #333333;
-  background-color: #ffffff;
+  color: #666;
+  background-image: url(footer.png); background-repeat:repeat-x; background-position:bottom;
 }
 
 a {
@@ -820,6 +820,7 @@ ul ol,
 ol ol,
 ol ul {
   margin-bottom: 0;
+
 }
 
 li {
@@ -1129,15 +1130,13 @@ input[type="search"],
 input[type="tel"],
 input[type="color"],
 .uneditable-input {
-  background-color: #ffffff;
-  border: 1px solid #cccccc;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-  -webkit-transition: border linear 0.2s, box-shadow linear 0.2s;
-     -moz-transition: border linear 0.2s, box-shadow linear 0.2s;
-       -o-transition: border linear 0.2s, box-shadow linear 0.2s;
-          transition: border linear 0.2s, box-shadow linear 0.2s;
+background: #ffffff;
+border: 1px #d5d9dd solid;
+border-bottom: 1px #d9dce1 solid;
+padding: 10px 15px; width:300px;
+-webkit-box-shadow: 10px 10px 13px -12px rgba(0,0,0,0.75);
+-moz-box-shadow: 10px 10px 13px -12px rgba(0,0,0,0.75);
+box-shadow: 10px 10px 13px -12px rgba(0,0,0,0.75);
 }
 
 textarea:focus,
@@ -2005,6 +2004,7 @@ table {
   width: 100%;
   margin-bottom: 20px;
 }
+
 
 .table th,
 .table td {
@@ -3254,7 +3254,7 @@ button.close {
 
 .btn:hover,
 .btn:focus {
-  color: #333333;
+  color: #666;
   text-decoration: none;
   background-position: 0 -15px;
   -webkit-transition: background-position 0.1s linear;
@@ -3874,7 +3874,7 @@ input[type="submit"].btn.btn-mini {
 }
 
 .alert {
-  padding: 8px 35px 8px 14px;
+  padding: 8px 20px 8px 20px;
   margin-bottom: 20px;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
   background-color: #fcf8e3;
@@ -3882,6 +3882,7 @@ input[type="submit"].btn.btn-mini {
   -webkit-border-radius: 4px;
      -moz-border-radius: 4px;
           border-radius: 4px;
+		  width:900px; margin: auto;
 }
 
 .alert,
@@ -4451,7 +4452,7 @@ input[type="submit"].btn.btn-mini {
 
 .navbar .btn,
 .navbar .btn-group {
-  margin-top: 5px;
+  margin-top: 15px;
 }
 
 .navbar .btn-group .btn,
@@ -4599,6 +4600,7 @@ input[type="submit"].btn.btn-mini {
   display: block;
   float: left;
   margin: 0 10px 0 0;
+  margin-top:10px;
 }
 
 .navbar .nav.pull-right {
@@ -4791,21 +4793,21 @@ input[type="submit"].btn.btn-mini {
 }
 
 .navbar-inverse .navbar-inner {
-  background-color: #1b1b1b;
-  background-image: -moz-linear-gradient(top, #222222, #111111);
-  background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#222222), to(#111111));
-  background-image: -webkit-linear-gradient(top, #222222, #111111);
-  background-image: -o-linear-gradient(top, #222222, #111111);
-  background-image: linear-gradient(to bottom, #222222, #111111);
-  background-repeat: repeat-x;
-  border-color: #252525;
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff222222', endColorstr='#ff111111', GradientType=0);
+background: rgba(73,155,234,1);
+background: -moz-linear-gradient(top, rgba(73,155,234,1) 0%, rgba(27,71,181,1) 100%);
+background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(73,155,234,1)), color-stop(100%, rgba(27,71,181,1)));
+background: -webkit-linear-gradient(top, rgba(73,155,234,1) 0%, rgba(27,71,181,1) 100%);
+background: -o-linear-gradient(top, rgba(73,155,234,1) 0%, rgba(27,71,181,1) 100%);
+background: -ms-linear-gradient(top, rgba(73,155,234,1) 0%, rgba(27,71,181,1) 100%);
+background: linear-gradient(to bottom, rgba(73,155,234,1) 0%, rgba(27,71,181,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#499bea', endColorstr='#1b47b5', GradientType=0 );
+padding:0px 10px 0px 10px;
 }
 
 .navbar-inverse .brand,
 .navbar-inverse .nav > li > a {
-  color: #999999;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  color: #fff;
+  text-shadow: -1px -1px 0 #56819e;
 }
 
 .navbar-inverse .brand:hover,
@@ -4816,7 +4818,7 @@ input[type="submit"].btn.btn-mini {
 }
 
 .navbar-inverse .brand {
-  color: #999999;
+  color: #fff;
 }
 
 .navbar-inverse .navbar-text {
@@ -4833,7 +4835,7 @@ input[type="submit"].btn.btn-mini {
 .navbar-inverse .nav .active > a:hover,
 .navbar-inverse .nav .active > a:focus {
   color: #ffffff;
-  background-color: #111111;
+  background-color: #006699;
 }
 
 .navbar-inverse .navbar-link {
@@ -6165,3 +6167,40 @@ a.badge:focus {
 .affix {
   position: fixed;
 }
+
+#page{
+border-radius: 7px 7px 7px 7px;
+-moz-border-radius: 7px 7px 7px 7px;
+-webkit-border-radius: 7px 7px 7px 7px;
+border: 0px solid #000000;
+-webkit-box-shadow: 10px 10px 14px -12px rgba(0,0,0,0.75);
+-moz-box-shadow: 10px 10px 14px -12px rgba(0,0,0,0.75);
+box-shadow: 10px 10px 14px -12px rgba(0,0,0,0.75);
+padding:20px; border:solid 1px #ccc; margin-top:10px;
+background: rgba(255,255,255,1);
+background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(47%, rgba(246,246,246,1)), color-stop(100%, rgba(237,237,237,1)));
+background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+background: -o-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed', GradientType=0 );
+}
+
+.login{
+width:50%;
+float:right;
+}
+
+.welcome{
+width:40%;
+float:left;
+padding-left:20px;
+}
+
+.footer{
+width:100%;
+height:500px;
+
+}
+
