--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,6 @@
-<div class="container">
-<h2>Sign up ?</h2>
+<div class="container" id="page">
+<div class="login">
+<h3>Registrasi User</h3>
 
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
@@ -10,17 +11,24 @@
   <div><%= f.label :birthday %><br />
   <%= f.email_field :birthday, :autofocus => true %></div> -->
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+  <div>
+  <%= f.email_field :email, :autofocus => true ,:placeholder => "Email"%></div>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+  <div>
+  <%= f.password_field :password ,:placeholder => "Sandi"%></div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+  <div>
+  <%= f.password_field :password_confirmation ,:placeholder => "Konfirmasi Kata Sandi"%></div>
 
-  <div><%= f.submit "Sign up" %></div>
+  <div><%= f.submit "Sign up",:class => "btn" %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
 </div>
+
+<div class="welcome">
+  <%= image_tag("welcome.png",:align =>"center") %>
+</div>
+
+</div>
+
