--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <%= link_to 'FORUMMI', thread_forums_path, :class=>'brand' %>
+          <a class="brand" href="#"><%= image_tag("logo.png", :alt => "rss feed", :width => "40px") %> FORUMMI COMMUNITY</a>
           <div class="nav-collapse collapse">
+            <% if user_signed_in? -%>
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
               <li><a href="#about">About</a></li>
@@ -36,6 +37,7 @@
                 </ul>
               </li>
             </ul>
+            <% end %>
             <% if user_signed_in? -%>
             <form class="navbar-form pull-right">
               <%= link_to 'My info', edit_user_registration_path, :class=>'btn' %>
@@ -53,5 +55,7 @@
     </div>
 <%= yield %>
 
+<div class="footer">
+</div>
 </body>
 </html>
