--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <h4>Listing categories</h4>
 
 <table class="table table-striped">
@@ -13,11 +14,10 @@
 <% @categories.each do |category| %>
   <tr>
     <td>&nbsp;</td>
-    <td><%= category.name %></td>
+    <td><%= link_to category.name, category %></td>
     <td>&nbsp;</td>
-    <td><%= link_to 'Show', category %></td>
-    <td><%= link_to 'Edit', edit_category_path(category) %></td>
-    <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+    <td><%= link_to 'Edit', edit_category_path(category), :class=>'btn' %></td>
+    <td><%= link_to 'Destroy',  category, method: :delete, data: { confirm: 'Are you sure?' }, :class=>'btn btn-danger' %></td>
   </tr>
 <% end %>
 </table>
@@ -25,3 +25,4 @@
 <br />
 
 <%= link_to 'New Category', new_category_path,:class=>'btn btn-primary',:role=>'button' %>
+</div>
