--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a href="#" class="brand">FORUMMI</a>
-          <a class="brand" href="#"><%= image_tag("logo.png", :alt => "rss feed", :width => "40px") %> FORUMMI COMMUNITY</a>
+          <!--<a class="brand" href="#"><%= image_tag("logo.png", :alt => "rss feed", :width => "40px") %> FORUMMI COMMUNITY</a>-->
           <div class="nav-collapse collapse">
             <% if user_signed_in? -%>
             <ul class="nav">
@@ -57,8 +56,8 @@
       </div>
     </div>
 <%= yield %>
-
 <div class="footer">
+ With Ruby on Rails . ForUMMI 2013
 </div>
 </body>
 </html>
