--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <!--<a class="brand" href="#"><%= image_tag("logo.png", :alt => "rss feed", :width => "40px") %> FORUMMI COMMUNITY</a>-->
+          <a class="brand" href="#"><%= image_tag("logo.png", :alt => "rss feed", :width => "40px") %> FORUMMI COMMUNITY</a>
           <div class="nav-collapse collapse">
             <% if user_signed_in? -%>
             <ul class="nav">
