--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,58 @@
 // Place all the styles related to the home controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+input#user_remember_me{
+  float: left;
+  margin-right: 5px;
+}
+
+#container{
+  margin-top: 50px;
+  
+  #wrapper{
+    width: 960px;
+    margin: 0 auto;
+    border-radius: 7px 7px 7px 7px;
+    -moz-border-radius: 7px 7px 7px 7px;
+    -webkit-border-radius: 7px 7px 7px 7px;
+    border: 0px solid #000000;
+    -webkit-box-shadow: 10px 10px 14px -12px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 14px -12px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 14px -12px rgba(0,0,0,0.75);
+    padding:20px; border:solid 1px #ccc; margin-top:10px;
+    background: rgba(255,255,255,1);
+    background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(47%, rgba(246,246,246,1)), color-stop(100%, rgba(237,237,237,1)));
+    background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+    background: -o-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+    background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+    background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed', GradientType=0 );
+  }
+
+  .login{
+    width:50%;
+    float:right;
+  }
+
+  .welcome{
+    width:40%;
+    float:left;
+    padding-left:20px;
+  }  
+}
+
+.navbar-form.pull-right{
+  width: 266px;
+  .current_user_avatar{
+    width: 32px;
+    height: 32px;
+    float: left;
+    margin-right: 10px;
+    border: 2px solid white;
+    margin-top: 13px;
+  }
+
+
+}
