--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,11 +1,15 @@
-<p>
-  <b>Comment:</b>
-  <%= comment.body %>
-</p>
-<p>
-<button type="button" class="btn btn-primary" data-toggle="button">
-  <%= link_to 'Destroy Comment', [comment.thread_forum, comment],
-               :confirm => 'Are you sure?',
-               :method => :delete %>
-</button>
-</p>
+<%= comments.each do |comment| %>
+  <%- if comment.persisted? %>
+    <p>
+      <b>Comment:</b>
+      <%= comment.body %>
+    </p>
+    <p>
+    <button type="button" class="btn btn-primary" data-toggle="button">
+      <%= link_to 'Destroy Comment', [comment.thread_forum, comment],
+                   :confirm => 'Are you sure?',
+                   :method => :delete %>
+    </button>
+    </p>
+  <% end %>
+<% end %>
