--- a/app/views/thread_forums/show.html.erb
+++ b/app/views/thread_forums/show.html.erb
@@ -1,4 +1,3 @@
-<div class="container">
 <p id="notice"><%= notice %></p>
 
 <!-- <p>
@@ -34,7 +33,7 @@
 <br />
  <% end %>
 <h2>Comments</h2>
-<%= render @thread_forum.comments %>
+<%= render partial: "comments/comment", locals: {comments: @thread_forum.comments} %>
 
 <h2>Add a comment:</h2>
 <%= render "comments/form" %>
@@ -74,4 +73,3 @@
 <br />
 <%= link_to 'Edit', edit_thread_forum_path(@thread_forum), :class=>'btn' %> |
 <%= link_to '< Back', thread_forums_path, :class=>'btn' %>
-</div>
