--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -36,6 +36,6 @@
     <%= f.text_area :bio, :rows=>'10' %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Submit", class: "btn" %>
   </div>
 <% end %>
