--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -11,23 +11,26 @@ input#user_remember_me{
   margin-top: 50px;
   
   #wrapper{
+    // flat design biar leibih modern
     width: 960px;
     margin: 0 auto;
-    border-radius: 7px 7px 7px 7px;
-    -moz-border-radius: 7px 7px 7px 7px;
-    -webkit-border-radius: 7px 7px 7px 7px;
-    border: 0px solid #000000;
-    -webkit-box-shadow: 10px 10px 14px -12px rgba(0,0,0,0.75);
-    -moz-box-shadow: 10px 10px 14px -12px rgba(0,0,0,0.75);
-    box-shadow: 10px 10px 14px -12px rgba(0,0,0,0.75);
-    padding:20px; border:solid 1px #ccc; margin-top:10px;
-    background: rgba(255,255,255,1);
-    background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
-    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(47%, rgba(246,246,246,1)), color-stop(100%, rgba(237,237,237,1)));
-    background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
-    background: -o-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
-    background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
-    background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+    padding:20px; 
+    border:solid 1px #ccc; 
+    margin-top:10px;
+    // border-radius: 7px 7px 7px 7px;
+    // -moz-border-radius: 7px 7px 7px 7px;
+    // -webkit-border-radius: 7px 7px 7px 7px;    
+    -webkit-box-shadow: 0px 8px 14px -12px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 8px 14px -12px rgba(0,0,0,0.75);
+    box-shadow: 0px 8px 14px -12px rgba(0,0,0,0.75);
+    
+    // background: rgba(255,255,255,1);
+    // background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+    // background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(47%, rgba(246,246,246,1)), color-stop(100%, rgba(237,237,237,1)));
+    // background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+    // background: -o-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+    // background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
+    // background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ededed', GradientType=0 );
   }
 
@@ -56,3 +59,17 @@ input#user_remember_me{
 
 
 }
+
+
+.footer{
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 30px;
+  text-align: center;
+  padding-top: 10px;
+  margin-top: 50px;
+  border-top: 1px solid #ccc;
+  background-color: #efefef;
+}
+
