--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -1,3 +1,30 @@
 // Place all the styles related to the Comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.comment{
+  position: relative;
+  min-height: 50px;
+  border-bottom: 1px solid #eee;
+  padding-bottom: 10px;
+  .comment-action.remove{
+    position: absolute;
+    top: 5px;
+    right: 10px;
+    font-size: 14px;
+  }
+  .comment-poster{
+    position: absolute;
+    left: 0px;
+    bottom: 10px;
+    color: #ddd;
+    font-style: italic;
+  }
+}
+
+form.new_comment{
+  textarea{
+    width: 905px;
+    height: 50px
+  }
+}
