--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,9 +1,8 @@
-<%= form_for([@thread_forum, @thread_forum.comments.build]) do |f| %>
+<%= form_for([@thread_forum, @thread_forum.comments.build], class: "new-comment") do |f| %>
   <div class="field">
-    <%= f.label :body %><br />
     <%= f.text_area :body %>
   </div>
   <div class="actions">
-    <%= f.submit "Submit", class: "btn" %>
+    <%= f.submit "Submit", class: "btn pull-right" %>
   </div>
 <% end %>
