--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,23 +3,15 @@
 
 <%= form_for(resource, :class=>'form-horizontal', :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
-
-  <!-- <div><%= f.label :username %><br />
-  <%= f.email_field :username %></div>
-
-  <div><%= f.label :birthday %><br />
-  <%= f.email_field :birthday, :autofocus => true %></div> -->
-
-  <div>
-  <%= f.email_field :email, :autofocus => true ,:placeholder => "Email"%></div>
-
-  <div>
-  <%= f.password_field :password ,:placeholder => "Sandi"%></div>
-
-  <div>
-  <%= f.password_field :password_confirmation ,:placeholder => "Konfirmasi Kata Sandi"%></div>
-
+<!--   <div><%= f.label :birthday %><br />
+  <%= f.email_field :birthday, :autofocus => true %></div>
+ -->
+  <div><%= f.text_field :username, :placeholder => "Username" %></div>
+  <div><%= f.email_field :email, :autofocus => true ,:placeholder => "Email"%></div>
+  <div><%= f.password_field :password ,:placeholder => "Sandi"%></div>
+  <div><%= f.password_field :password_confirmation ,:placeholder => "Konfirmasi Kata Sandi"%></div>
   <div><%= f.submit "Sign up",:class => "btn" %></div>
+  
 <% end %>
 
 <%= render "devise/shared/links" %>
