--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,7 +30,9 @@ body {
       -webkit-box-shadow: 0px 8px 14px -12px rgba(0,0,0,0.75);
       -moz-box-shadow: 0px 8px 14px -12px rgba(0,0,0,0.75);
       box-shadow: 0px 8px 14px -12px rgba(0,0,0,0.75);
-      
+      border-radius: 10px;
+      -moz-border-radius: 10px;
+      -webkit-border-radius: 10px;
       // background: rgba(255,255,255,1);
       // background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(246,246,246,1) 47%, rgba(237,237,237,1) 100%);
       // background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(47%, rgba(246,246,246,1)), color-stop(100%, rgba(237,237,237,1)));
@@ -87,5 +89,8 @@ body {
   background: #eee;
   border-bottom: 2px solid #ddd;
   margin-bottom: 10px;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
   
 }
